update : seq logic

--- a/exaVeri/exaSample/Makefile
+++ b/exaVeri/exaSample/Makefile
@@ -1,10 +1,14 @@
-exHOME=../..
-V_BIN=${exHOME}/bin/verilator
-DESIGN=${exHOME}/exaVeri/exaDatabase
-VERI_HEAD=${exHOME}/include
-// VERILATOR_ROOT = /media/regaltos/mark/regaltosMini/dev/verilator/exaVeri/vbin
+exHOME=$(VERILATOR_ROOT)/..
+V_BIN=${VERILATOR_ROOT}/bin/verilator
+DESIGN=${exHOME}/exaDatabase
+VERI_HEAD=${VERILATOR_ROOT}/include
+
 add : add.cpp ${DESIGN}/add.v
 	${V_BIN} --cc -I${VERI_HEAD} --build $^
 
+
+
+ff : ff.cpp ${DESIGN}/ff.v
+	${V_BIN} --cc -I${VERI_HEAD} --build $^ -trace-vcd --exe
 
 
